# lab1

./: CMakeLists.txt  char.c  char.h  field_info.h  line.c  line.h  main.c  pictures.c  pictures.h  symbolpicture.c  symbolpicture.h  tests.c  tests.h
